objects/User/fields/Client_Number__c.field-meta.xml
<CustomField>
    <fullName>Client_Number__c</fullName>
    <label>Client Number</label>
    <length>30</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>