objects/User/fields/Email_Not_Verified__c.field-meta.xml
<CustomField>
    <fullName>Email_Not_Verified__c</fullName>
    <label>Email (Not Verified)</label>
    <type>Email</type>
</CustomField>