objects/User/fields/Email_Verification_Key__c.field-meta.xml
<CustomField>
    <fullName>Email_Verification_Key__c</fullName>
    <label>Email Verification Key</label>
    <length>128</length>
    <type>Text</type>
</CustomField>