objects/User/fields/Email_Verification_URL__c.field-meta.xml
<CustomField>
    <fullName>Email_Verification_URL__c</fullName>
    <label>Email Verification URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>