objects/User/fields/Force_Change_Password__c.field-meta.xml
<CustomField>
    <fullName>Force_Change_Password__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Force change password after login</description>
    <label>Force Change Password</label>
    <type>Checkbox</type>
</CustomField>