objects/User/fields/Is_CWS_First_Login__c.field-meta.xml
<CustomField>
    <fullName>Is_CWS_First_Login__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is CWS First Login</label>
    <type>Checkbox</type>
</CustomField>