objects/User/fields/LastTimeSensitiveRuleTriggerDate__c.field-meta.xml
<CustomField>
    <fullName>LastTimeSensitiveRuleTriggerDate__c</fullName>
    <label>LastTimeSensitiveRuleTriggerDate</label>
    <type>DateTime</type>
</CustomField>