objects/User/fields/MANUCLUB_ID__c.field-meta.xml
<CustomField>
    <fullName>MANUCLUB_ID__c</fullName>
    <description>Manuclub unique ID. System will set the value after user registration</description>
    <label>MANUCLUB ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>