objects/User/fields/qualtrics__QualtricsUserName__c.field-meta.xml
<CustomField>
    <fullName>qualtrics__QualtricsUserName__c</fullName>
    <label>QualtricsUserName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>