objects/User/listViews/Contact_Centre_Users.listView-meta.xml
<ListView>
    <fullName>Contact_Centre_Users</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>CCC CSO User</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Restricted CCC CSO User</value>
    </filters>
    <label>Contact Centre Users</label>
</ListView>