objects/User/listViews/Read_Only_Chatter_Users.listView-meta.xml
<ListView>
    <fullName>Read_Only_Chatter_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Read Only Chatter</value>
    </filters>
    <label>Read Only Chatter Users</label>
    <sharedTo>
        <role>System_Administrator</role>
    </sharedTo>
</ListView>