objects/User/listViews/WAM_User.listView-meta.xml
<ListView>
    <fullName>WAM_User</fullName>
    <booleanFilter>1 OR 2 OR 3</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>WAM Marketing</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>WAM Partnership Distribution</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>WAM Partnership Distribution Sales Client Service</value>
    </filters>
    <label>WAM User</label>
    <sharedTo>
        <role>System_Administrator</role>
        <roleAndSubordinatesInternal>WAM_Management</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>